# fiddi

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/lib/: blocks.fetch.rs  http.rs  optimize.rs
